--- a/pages/abmUsuarios.html
+++ b/pages/abmUsuarios.html
@@ -24,8 +24,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
     <link rel="stylesheet" href="../CSS/abmStyle.css" />
+    <link rel="stylesheet" href="../CSS/EstilosNav.css">
     <link rel="stylesheet" href="../CSS/style.css" />
-
+    <link rel="stylesheet" href="../CSS/footer-style.css">
     <title>SoundG3</title>
   </head>
   <body>
@@ -167,112 +168,7 @@
         <tbody id="cuerpoTablaUsuarios"></tbody>
       </table>
     </main>
-    <footer>
-      <div class="text-center py-3">
-        <div class="row m-0">
-          <div
-            class="col-12 col-sm-12 col-md-12 col-lg-3"
-            id="contenedorLogoFooter"
-          >
-            <a
-              href="index.html"
-              class="contenedorLogo d-flex justify-content-center"
-            >
-              <img
-                src="./img/logosoundg3.png"
-                alt="Logo"
-                class=""
-                id="imgFooter"
-              />
-            </a>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Productos</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Ingresar</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Registro</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Acerca de</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Acerca de Nosotros</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Ayuda</a
-                >
-              </li>
-            </ul>
-            <div class="d-flex flex-column">
-              <p class="text-light">Síguenos en nuestras redes:</p>
-              <div class="d-flex justify-content-center">
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-instagram fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-facebook fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-twitter fs-3 m-2"></i
-                ></a>
-                <a href="../pages/error404.html"
-                  ><i class="bi bi-linkedin fs-3 m-2"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-3">
-            <ul class="listaFooter">
-              <li class="mt-3 list-unstyled">
-                <h4 class="text-light fw-bold">Legales</h4>
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Información Legal</a
-                >
-              </li>
-              <li class="mt-3 list-unstyled">
-                <a
-                  href=""
-                  class="link-light link-underline-opacity-10 link-underline-opacity-50-hover text-light"
-                  >Privacidad</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="container-fluid d-flex justify-content-center">
-        <p class="text-light">
-          &copy; Sound G3 - Todos los derechos reservados
-        </p>
-      </div>
+    <footer id="inyectarFooter">
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -287,6 +183,7 @@
     <script src="../JS/localStorage.js"></script>
     <script src="../JS/abmUsuarios.js"></script>
     <script src="../JS/navbarPage.js"></script>
+    <script src="../JS/footerPage.js"></script>
     <script src="../JS/validaciones/abmAdmin.js"></script>
   </body>
 </html>
